Fix alignment issues on Mac
The magic number I used was different with the way Mac rendered some input elements. Also, I had to correct some CSS that was thrown out on some browsers.

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ textarea {
     display: inline-block;
 }
 .field-name .field-value {
-    width: calc(100% - 55px);
+    width: calc(100% - 58px);
 }
 .field-cost .field-value,
 .field-volume .field-value,
@@ -120,7 +120,7 @@ textarea {
     width: 80px;
 }
 .field-dollar-proof {
-    width: 100;
+    width: 100%;
     text-align: right;
 }
 .field-dollar-proof .field-value {
